# LR1_karelin

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
additionally/: Блок-схема.json  Потоковый граф.json
data/: tests.json
lib/: lr1.cpp  lr1.h
tests/: lr1_test.cpp
